Beta2  1.0.5 - 2009-04-xx

- Changed the return type of sql::SQLException::getSQLState() from
  std::string to const char * to be consistent with std::exception::what().
  (Andrey)


Beta   1.0.4 - 2009-03-xx

- Prepared support for upcoming Connector/C. (Georg)

- Added Windows installer. (Georg)

- Bumping up CMake minimum version requirement from 2.4.2 to 2.6.2.
  We need the latest version for Windows. (Lawrin)

- Added "metadataUseInfoSchema" to connection propery map which allows you
  to control the use of the INFORMATION_SCHEMA for meta data. (Andrey)

- Fixed a bug in all implementations of ResultSet::relative() which was giving
  wrong return value although positioning was working correctly. (Andrey)

- Fixed a leak in MySQL_PreparedResultSet when the result was containing a BLOB
  column. (Andrey)

- Implemented MySQL_ConnectionMetaData::supportsConvert(from, to). (Andrey)

- Introduced sql::DataType::YEAR to complement MySQL's YEAR type. (Andrey)

- Introduced PreparedStatement::getMetaData(). (Andrey)

- Introduced ResultSetMetaData::isZerofill(), which is not in the JDBC
  specification. (Andrey)

- Fixed all implementations of ResultSet::isNull() to check whether the current
  position is on a real row, not isBeforeFirst() nor isAfterLast(), like all
  getXXX methods do. (Andrey)

- Implementation for MySQL_DatabaseMetaData::getProcedures() when
  INFORMATION_SCHEMA is asked not to be used. (Andrey)

- Removed MySQL_DatabaseMetaData::getProcedureColumns() from the interface.
  Until now it was returning always an empty result set. Full implementation
  will be added at a later stage. (Andrey)

- Changed a bunch of methods of DatabaseMetaData()::getXXX, which returned `int`
  to return `unsigned int` because it makes more sense. (Andrey)


Alpha  1.0.3 - 2009-03-03

- Added new tests at test/unit/classes. Those tests are mostly about
  code coverage. Most of the actual functionality of the driver is tested