@@ -1,5 +1,14 @@
 Beta2  1.0.5 - 2009-04-xx
 
+- Changed the interface of sql::ConnectionMetaData, sql::ResultSetMetaData
+  and sql::ParameterMetaData to have a protected destructor. In this way the
+  client code doesn't need, and won't be able, to destruct the metadata
+  objects returned by the connector. The connector will handle their
+  destruction. This enables statements like :
+  connection->getMetaData->getSchema();
+  without the result of leaking memory because we lost the pointer returned
+  by getMetaData(). (Lawrin, Andrey)
+
 - Changed the return type of sql::SQLException::getSQLState() from
   std::string to const char * to be consistent with std::exception::what().
   (Andrey)
